--- a/model_training/11711_ner.ipynb
+++ b/model_training/11711_ner.ipynb
@@ -295,9 +295,9 @@
     "                }\n",
     "id_to_class_mapping = {v:k for k, v in class_mapping.items()}\n",
     "\n",
-    "train_data_path = 'CONLL Files/train/*.conll'\n",
-    "val_data_path = 'CONLL Files/val/*.conll'\n",
-    "test_data_path = 'CONLL Files/test/*.conll'\n",
+    "train_data_path = '../data/train/*.conll'\n",
+    "val_data_path = '../data/test/*.conll'\n",
+    "test_data_path = '../data/sciner-test/*.conll'\n",
     "\n",
     "tokenizer = RobertaTokenizerFast.from_pretrained('ml6team/keyphrase-extraction-kbir-inspec')\n",
     "\n",
